# tadasets

./: .flake8  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CNAME  DEPLOY.md  Examples.html  LICENSE.txt  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  setup.py
.github/: dependabot.yml
.github/workflows/: build_and_deploy.yml  python-app.yml  python-test.yml
_modules/: index.html
_modules/tadasets/: dimension.html  shapes.html
_sources/: index.rst.txt
_sources/reference/: index.rst.txt
_sources/reference/stubs/: tadasets.dsphere.rst.txt  tadasets.infty_sign.rst.txt  tadasets.shapes.dsphere.rst.txt  tadasets.shapes.sphere.rst.txt  tadasets.shapes.swiss_roll.rst.txt  tadasets.shapes.torus.rst.txt  tadasets.sphere.rst.txt  tadasets.swiss_roll.rst.txt  tadasets.torus.rst.txt
demo/: visualize.py
docs/: .gitignore  Makefile  conf.py  index.rst  make.bat  reference.rst
docs/notebooks/: Examples.ipynb
docs/reference/: index.rst
notebooks/: Examples.html  Examples.ipynb
reference/: index.html
reference/stubs/: tadasets.dsphere.html  tadasets.infty_sign.html  tadasets.shapes.dsphere.html  tadasets.shapes.sphere.html  tadasets.shapes.swiss_roll.html  tadasets.shapes.torus.html  tadasets.sphere.html  tadasets.swiss_roll.html  tadasets.torus.html
tadasets/: __init__.py  custom_exceptions.py  dimension.py  rotate.py  sample.py  shapes.py  swiss_holes_helpers.py  view.py
test/: test_rotate.py  test_sample.py  test_shapes.py
